--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!--link a css bs-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <!--link mi css-->
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/main.css">
         <!--link fa-->
         <script src="https://kit.fontawesome.com/e18cc0d570.js" crossorigin="anonymous"></script>
     </head>
@@ -40,7 +40,8 @@
                   <!--ends header-->
                   <!--empieza catalogo-->
      <h2> ⇃Nuestros productos⇂</h2>
-    <main class="catalogo">                                                                  <!--pistacho-->
+    <main class="catalogo">                                                                 
+                                                                                         <!--pistacho-->
 <article class="col-sm-12 col-md-6 col-lg-3 mb2">
     <div class="card " style="width: 18rem;">
         <img src="img/pistachos-home.jpg" class="card-img-top" alt="pistacho">
