--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <!--link mi css-->
         <link rel="stylesheet" href="css/main.css">
+        <!--link a animacion-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
         <!--link fa-->
         <script src="https://kit.fontawesome.com/e18cc0d570.js" crossorigin="anonymous"></script>
+        <!--description-->
+        <meta name="description" content="Llevamos los mejores productos para tu local directo a la puerta, unicamente alimentos organicos">
+        <meta name="keywords" content="pistachos, aceite de oliva, miel, pasas, finca, campo, restaurante, organico">
     </head>
     <body>
                                                             <!--JS DE BOOSTRAP-->
@@ -23,15 +28,15 @@
                   <!--start header-->
        <div class="header-index">
             <nav>
-                <div class="logo">
+                <div class="logo animate__animated animate__fadeIn animate__slow">
                     <a href="#">
                         <img src="img/logoblanco.png" alt="Don Juan Alimentos naturales">
                     </a>
                 </div>
                 <ul>
-                    <li><a href="views/alimentos.html">Alimentos</a></li>
-                    <li><a href="views/galeria.html">Galeria</a></li>
-                    <li><a href="views/contacto.html">Contacto</a></li>
+                    <li><a class="animate__animated animate__fadeInDown animate__slower" href="views/alimentos.html">Alimentos</a></li>
+                    <li><a class="animate__animated animate__fadeInDown animate__slower" href="views/galeria.html">Galeria</a></li>
+                    <li><a class="animate__animated animate__fadeInDown  animate__slower" href="views/contacto.html">Contacto</a></li>
                     <a href="views/carrito.html">
                     </a>
                 </ul>
