--- a/error404.html
+++ b/error404.html
@@ -12,7 +12,7 @@
 <body>
     <div  class="errorbg">
         <div class="error">
-            <p>Error 404</p>
+            <p>! Error 404 !</p>
             <p>Todavia estamos en siembra! Vuelva mas tarde.</p>
             <a href="index.html" class="animate__animated animate__fadeInUp animate__slow"> Volver al home</a>
         </div>
