--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="card-body">
             <h3 class="card-title">Pistacho</h3>
             <p class="card-text">Los mejores pistachos</p>
-            <a href="views/pistacho.html" class="btn">Comprar</a>
+            <a href="views/pistacho.html" class="btn btnCard">Comprar</a>
         </div>
         </div>
     </article>        
@@ -64,7 +64,7 @@
             <div class="card-body">
                 <h3 class="card-title">Aceite de oliva</h3>
                 <p class="card-text">Aceite extra virgen</p>
-                <a href="views/oliva.html" class="btn">Comprar</a>
+                <a href="views/oliva.html" class="btn btnCard">Comprar</a>
             </div>
             </div>
         </article>
@@ -75,7 +75,7 @@
                 <div class="card-body">
                     <h3 class="card-title">Miel</h3>
                     <p class="card-text">De alta montaña</p>
-                    <a href="views/miel.html" class="btn">Comprar</a>
+                    <a href="views/miel.html" class="btn btnCard">Comprar</a>
                 </div>
                 </div>
             </article>
@@ -86,7 +86,7 @@
                     <div class="card-body">
                         <h3 class="card-title">Pasas</h3>
                         <p class="card-text">Obtenidas de las mejores uvas</p>
-                        <a href="views/pasas.html" class="btn">Comprar</a>
+                        <a href="views/pasas.html" class="btn btnCard">Comprar</a>
                     </div>
                     </div>
                 </article>
