--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <img src="img/logoblanco.png" alt="Don Juan Alimentos naturales">
                     </a>
                 </div>
-                <ul>
+                <ul class="ps-1 mb-0">
                     <li><a class="animate__animated animate__fadeInDown animate__slower" href="views/alimentos.html">Alimentos</a></li>
                     <li><a class="animate__animated animate__fadeInDown animate__slower" href="views/galeria.html">Galeria</a></li>
                     <li><a class="animate__animated animate__fadeInDown  animate__slower" href="views/contacto.html">Contacto</a></li>
